Created Form1, Form2, ServerModule1, editor.ItemTemplate1 and 10 more; Edited settings, editor.RowTemplate1, main and editor

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,10 +1,24 @@
 unique_ids:
   forms:
-    editor: '1695489848061458662481527.15186'
+    editor.RowTemplate2: '1695738282076612425280311.6453'
+    editor.ItemTemplate4: '1695738972763792354311632.5114'
+    editor.ItemTemplate1: '1695738226270843164887814.0823'
+    editor.RowTemplate1.RowTemplate4: '1695738322625642688128837.4594'
+    editor.RowTemplate1.RowTemplate3: '1695738317874836196457338.8821'
     editor.RowTemplate1: '1695735017582461305565922.79803'
+    Form2: '1695749515055666735579135.3405'
     main: RMSRO4VOSZE5UCBCLGD3XPZ6U3SIC7CI
+    main.ItemTemplate3: '169573858273833406342077.486607'
+    editor.ItemTemplate2: '169573826734894064329143.04964'
+    Form1: '169574848493541470076474.19953'
+    new_song: '169574737583262035541788.93001'
+    editor: '1695489848061458662481527.15186'
   modules: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1695736932048592438478707.8512'
   assets:
     standard-page.html: UZ4LQUYGVATFRD2ZRE5VFSFZOZKXFAAD
     theme.css: EHQ3CRPXXFMQKA3ZCFOAZ74A3YIKXLNT
+    editor/.gitkeep: '169574917307396029137589.79059'
+    editor/editor.html: '1695749181112336746536376.15704'
+    editor/editor_func.js: '1695749222843895550213793.7444'
