--- a/client_code/editor/ItemTemplate4/form_template.yaml
+++ b/client_code/editor/ItemTemplate4/form_template.yaml
@@ -1,10 +1,18 @@
-container: {type: DataRowPanel}
+container:
+  type: ColumnPanel
+  properties: {col_widths: '{"NVQQOO":40,"XPKCQJ":20}'}
 components:
+- type: Label
+  properties: {}
+  name: label_1
+  layout_properties: {grid_position: 'SCKOBH,NVQQOO'}
+  data_bindings:
+  - {property: text, code: 'self.item[''titolo'']'}
 - type: Button
   properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
     foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
     underline: false, icon: 'fa:pencil'}
-  name: edit
-  layout_properties: {column: NYVQZA}
+  name: button_1
+  layout_properties: {grid_position: 'SCKOBH,XPKCQJ'}
 is_package: true
