--- a/client_code/editor/form_template.yaml
+++ b/client_code/editor/form_template.yaml
@@ -4,38 +4,129 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {col_widths: '{"XATOCZ":45,"JSKGSV":15,"HJJVCX":50,"JIBCXO":10,"JJVBWR":25,"OQHAAB":10}'}
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - type: DataGrid
+  - type: Button
+    properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Nuovo, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:plus'}
+    name: nuovo
+    layout_properties: {grid_position: 'JRHOJK,HSUVLN'}
+    event_bindings: {click: nuovo_click}
+  - type: Button
+    properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: false, text: Crea nuovo, font_size: null, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: 'fa:file'}
+    name: crea
+    layout_properties: {grid_position: 'VBXQRM,RCRCQC'}
+    event_bindings: {click: crea_click}
+  - type: FileLoader
     properties:
-      role: null
-      columns:
-      - {id: YQDGDB, title: Titolo, data_key: column_1, $$hashKey: 'object:2169',
-        width: '425'}
-      - {id: NYVQZA, title: Modifica, data_key: column_2, $$hashKey: 'object:2170',
-        width: '75', expand: false}
-      auto_header: true
+      role: tonal-button
+      show_state: true
+      align: center
       tooltip: ''
       border: ''
+      file_types: .txt
+      enabled: true
+      files: []
       foreground: ''
-      rows_per_page: 20
-      visible: true
-      wrap_on: never
-      show_page_controls: true
+      visible: false
+      text: Carica
+      font_size: null
+      font: ''
+      spacing_above: small
+      icon_align: left
+      spacing_below: small
+      italic: false
+      file: null
+      background: ''
+      bold: false
+      underline: false
+      multiple: false
+      icon: fa:upload
+    name: carica
+    layout_properties: {grid_position: 'VBXQRM,PDIZLN'}
+    event_bindings: {change: carica_change}
+  - type: TextBox
+    properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: Titolo,
+      border: '', enabled: true, foreground: '', visible: false, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false}
+    name: nuovo_titolo
+    layout_properties: {grid_position: 'XREDOR,HJJVCX'}
+  - type: Button
+    properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: false, text: OK, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: crea_OK
+    layout_properties: {grid_position: 'XREDOR,JIBCXO'}
+    event_bindings: {click: crea_OK_click}
+  - type: TextBox
+    properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: Tonalità (numero),
+      border: '', enabled: true, foreground: '', visible: false, text: '', font_size: null,
+      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false}
+    name: tonalita
+    layout_properties: {grid_position: 'KGHNCH,JJVBWR'}
+  - type: DropDown
+    properties:
+      role: outlined
+      align: full
+      tooltip: ''
+      placeholder: ''
+      border: ''
+      enabled: true
+      foreground: ''
+      items: ['']
+      visible: false
+      font_size: null
+      font: ''
       spacing_above: small
       spacing_below: small
+      italic: false
       background: ''
-    name: indice
-    layout_properties: {grid_position: 'BLIAAW,BSAOVJ'}
+      bold: false
+      underline: false
+      include_placeholder: false
+    name: modo
+    layout_properties: {grid_position: 'KGHNCH,FOKGWL'}
+  - type: Button
+    properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: false, text: OK, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: carica_OK
+    layout_properties: {grid_position: 'KGHNCH,OQHAAB'}
+    event_bindings: {click: carica_OK_click}
+  - type: DataRowPanel
+    properties: {}
+    name: data_row_panel_1
+    layout_properties: {grid_position: 'TYVNHY,XATOCZ'}
     components:
-    - type: RepeatingPanel
-      properties: {spacing_above: none, spacing_below: none, item_template: editor.RowTemplate1}
-      name: repeating_panel_1
-      layout_properties: {}
-    data_bindings:
-    - {property: tag, code: 'self.item['''']'}
+    - type: Label
+      properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: Titolo, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: col_1_head
+      layout_properties: {column: null}
+  - type: Label
+    properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Modifica, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_2
+    layout_properties: {grid_position: 'TYVNHY,JSKGSV'}
+  - type: RepeatingPanel
+    properties: {item_template: editor.ItemTemplate4}
+    name: lista
+    layout_properties: {grid_position: 'BVVPDS,HMBDNM'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
