--- a/client_code/main/form_template.yaml
+++ b/client_code/main/form_template.yaml
@@ -20,6 +20,7 @@ components:
         background: '', bold: false, underline: false, icon: ''}
       name: button_libretto
       layout_properties: {grid_position: 'CUHEFD,GNTMVE'}
+      event_bindings: {click: button_libretto_click}
     - type: Button
       properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Canti della domenica, font_size: null,
@@ -34,6 +35,7 @@ components:
         background: '', bold: false, underline: false, icon: ''}
       name: button_editor
       layout_properties: {grid_position: 'CUHEFD,WEXVZP'}
+      event_bindings: {click: button_editor_click}
     - type: ColumnPanel
       properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
         wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
