--- a/client_code/new_song/form_template.yaml
+++ b/client_code/new_song/form_template.yaml
@@ -33,20 +33,68 @@ components:
     name: legenda1
     layout_properties: {grid_position: 'ZQEVHH,XVSARA'}
     components: []
-  - type: TextBox
-    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: Tonalità,
-      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-      font: '', spacing_above: small, type: number, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Tonalità:', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_tonalita
+    layout_properties: {grid_position: 'HIEHRC,GILKLI'}
+  - type: DropDown
+    properties:
+      role: outlined
+      align: full
+      tooltip: ''
+      placeholder: ''
+      border: ''
+      enabled: true
+      foreground: ''
+      items: []
+      visible: true
+      font_size: null
+      font: ''
+      spacing_above: small
+      spacing_below: small
+      italic: false
+      background: ''
+      bold: false
+      underline: false
+      include_placeholder: false
     name: tonalita
-    layout_properties: {grid_position: 'VAHSBJ,KZUQMK'}
-  - type: TextBox
-    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: Modo,
-      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false}
+    layout_properties: {grid_position: 'HIEHRC,NVVKVL'}
+  - type: Label
+    properties: {}
+    name: label_1
+    layout_properties: {grid_position: 'HIEHRC,ACVYNA'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: 'Modo:', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_modo
+    layout_properties: {grid_position: 'HIEHRC,ANIHOT'}
+  - type: DropDown
+    properties:
+      role: outlined
+      align: full
+      tooltip: ''
+      placeholder: ''
+      border: ''
+      enabled: true
+      foreground: ''
+      items: []
+      visible: true
+      font_size: null
+      font: ''
+      spacing_above: small
+      spacing_below: small
+      italic: false
+      background: ''
+      bold: false
+      underline: false
+      include_placeholder: false
     name: modo
-    layout_properties: {grid_position: 'VAHSBJ,ZFPQVK'}
+    layout_properties: {grid_position: 'HIEHRC,SZFKCP'}
   - type: TextArea
     properties: {role: outlined, align: left, height: 311.46299999999997, tooltip: '',
       placeholder: '', border: '', enabled: true, foreground: '', visible: true, text: "\\\
@@ -73,7 +121,7 @@ components:
   properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
     foreground: '', visible: true, text: Salva, font_size: null, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-    underline: false, icon: ''}
+    underline: false, icon: 'fa:floppy-o'}
   name: salva
   layout_properties: {slot: default}
   event_bindings: {click: salva_click}
