--- a/client_code/modify/form_template.yaml
+++ b/client_code/modify/form_template.yaml
@@ -97,26 +97,15 @@ components:
     layout_properties: {grid_position: 'HIEHRC,SZFKCP'}
   - type: TextArea
     properties: {role: outlined, align: left, height: 311.46299999999997, tooltip: '',
-      placeholder: '', border: '', enabled: true, foreground: '', visible: true, text: "\\\
-        head \n\\intro \n\\start\n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\
-        \\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\\
-        c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c\
-        \ \n\\l \n\\c \n\\l \n\\c \n\\l \n\\c \n\\l \n\\end", font_size: null, auto_expand: true,
-      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
-      bold: false, underline: false}
+      placeholder: '', border: '', enabled: true, foreground: '', visible: true, text: '',
+      font_size: null, auto_expand: true, font: '', spacing_above: small, spacing_below: small,
+      italic: false, background: '', bold: false, underline: false}
     name: editor
     layout_properties: {grid_position: 'KKJERZ,RRMLAN'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
-- type: Label
-  properties: {role: headline, align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: titolo
-  layout_properties: {slot: title}
 - type: Button
   properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
     foreground: '', visible: true, text: Salva, font_size: null, font: '', spacing_above: small,
@@ -125,3 +114,10 @@ components:
   name: salva
   layout_properties: {slot: default}
   event_bindings: {click: salva_click}
+- type: TextBox
+  properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+    font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
+  name: titolo
+  layout_properties: {slot: title}
