--- a/client_code/editor/ItemTemplate4/form_template.yaml
+++ b/client_code/editor/ItemTemplate4/form_template.yaml
@@ -16,4 +16,12 @@ components:
   name: button_1
   layout_properties: {grid_position: 'SCKOBH,XPKCQJ'}
   event_bindings: {click: button_1_click}
+- type: Button
+  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:trash'}
+  name: delete
+  layout_properties: {grid_position: 'SCKOBH,PEFYSE'}
+  event_bindings: {click: delete_click}
 is_package: true
