--- a/client_code/modify/form_template.yaml
+++ b/client_code/modify/form_template.yaml
@@ -102,18 +102,26 @@ components:
       italic: false, background: '', bold: false, underline: false}
     name: editor
     layout_properties: {grid_position: 'KKJERZ,RRMLAN'}
+  - type: Button
+    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Annulla, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:times'}
+    name: annulla
+    layout_properties: {grid_position: 'EHLPJH,PHFKYN'}
+    event_bindings: {click: annulla_click}
+  - type: Button
+    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Salva, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:floppy-o'}
+    name: salva
+    layout_properties: {slot: default, grid_position: 'EHLPJH,QGGQCS'}
+    event_bindings: {click: salva_click}
 - type: FlowPanel
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
-- type: Button
-  properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-    foreground: '', visible: true, text: Salva, font_size: null, font: '', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-    underline: false, icon: 'fa:floppy-o'}
-  name: salva
-  layout_properties: {slot: default}
-  event_bindings: {click: salva_click}
 - type: TextBox
   properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
