--- a/client_code/modify/form_template.yaml
+++ b/client_code/modify/form_template.yaml
@@ -27,8 +27,8 @@ components:
 
         - Per saltare una riga inserire una riga con scritto "$"
 
-        - Per indentare/deindentare inserire una riga con scritto "$$" (da usare all''inizio
-        e alla fine del ritornello)', font: '', spacing_above: small, spacing_below: small,
+        - Per indentare/deindentare inserire una riga con scritto "$$" (aggiunge già
+        un ritorno a capo)', font: '', spacing_above: small, spacing_below: small,
       data: null, background: '', format: markdown}
     name: legenda1
     layout_properties: {grid_position: 'ZQEVHH,XVSARA'}
@@ -104,14 +104,6 @@ components:
     layout_properties: {grid_position: 'KKJERZ,RRMLAN'}
   - type: Button
     properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Annulla, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:times'}
-    name: annulla
-    layout_properties: {grid_position: 'EHLPJH,PHFKYN'}
-    event_bindings: {click: annulla_click}
-  - type: Button
-    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: Salva, font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: 'fa:floppy-o'}
@@ -122,6 +114,23 @@ components:
   properties: {}
   name: navbar_links
   layout_properties: {slot: nav-right}
+  components:
+  - type: Button
+    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:arrow-circle-left'}
+    name: back
+    layout_properties: {}
+    event_bindings: {click: back_click}
+  - type: Button
+    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:home'}
+    name: home
+    layout_properties: {}
+    event_bindings: {click: home_click}
 - type: TextBox
   properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: '',
     border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
