--- a/client_code/editor/form_template.yaml
+++ b/client_code/editor/form_template.yaml
@@ -190,3 +190,23 @@ components:
     underline: false, icon: ''}
   name: title
   layout_properties: {slot: title}
+- type: ColumnPanel
+  properties: {col_widths: '{}'}
+  name: sidebar
+  layout_properties: {slot: left-nav}
+  components:
+  - type: Button
+    properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Canti della domenica, font_size: null,
+      font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
+    name: canti_domenica
+    layout_properties: {grid_position: 'UTYKSR,NCWSMC'}
+    event_bindings: {click: canti_domenica_click}
+  - type: Button
+    properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Gestisci raccolte, font_size: null, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
+    name: raccolte
+    layout_properties: {grid_position: 'GGGTXE,WCDKRT'}
