--- a/client_code/canti_domenica_editor/form_template.yaml
+++ b/client_code/canti_domenica_editor/form_template.yaml
@@ -4,7 +4,7 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {col_widths: '{"PCASSJ":40,"VAOXNQ":10,"GSPWUP":5,"QVTQCI":5}'}
   name: content_panel
   layout_properties: {slot: default}
   components:
@@ -20,30 +20,47 @@ components:
     properties: {item_template: canti_domenica_editor.ItemTemplate6}
     name: lista
     layout_properties: {grid_position: 'AWRFZJ,IXELOS'}
-  - type: Button
-    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Avanti, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: avanti
-    layout_properties: {grid_position: 'KFGHGL,EMXTXZ'}
-    event_bindings: {click: avanti_click}
   - type: Label
     properties: {role: title, align: left, tooltip: '', border: '', foreground: '',
-      visible: false, text: Specificare l'ordine dei canti della domenica, font_size: null,
+      visible: true, text: Specificare l'ordine dei canti selezionati, font_size: null,
       font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
       background: '', bold: false, underline: false, icon: ''}
     name: ins
     layout_properties: {grid_position: 'CQZGAB,MBHWIK'}
+  - type: ColumnPanel
+    properties: {}
+    name: column_panel_1
+    layout_properties: {grid_position: 'HEABUC,PCASSJ'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Tonalità, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: tonalita_head
+    layout_properties: {grid_position: 'HEABUC,VAOXNQ'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Modo, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: modo_head
+    layout_properties: {grid_position: 'HEABUC,GSPWUP'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Ordine, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: num_head
+    layout_properties: {grid_position: 'HEABUC,QVTQCI'}
   - type: RepeatingPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
-      visible: false, spacing_above: small, spacing_below: small, item_template: canti_domenica_editor.ItemTemplate7,
+      visible: true, spacing_above: small, spacing_below: small, item_template: canti_domenica_editor.ItemTemplate7,
       background: ''}
     name: domenica
     layout_properties: {grid_position: 'VXJWSX,BIXIQL'}
   - type: Button
     properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: false, text: Salva, font_size: null, font: '', spacing_above: small,
+      foreground: '', visible: true, text: Salva, font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: 'fa:floppy-o'}
     name: salva
