--- a/client_code/canto/form_template.yaml
+++ b/client_code/canto/form_template.yaml
@@ -4,7 +4,7 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{"JZYPTN":10,"WKLWKL":3,"LMYDOD":45,"ZSFSHE":12,"OENOBI":20,"AKEJNV":10,"UMUMFF":10,"YOPWEU":35}'}
+  properties: {col_widths: '{"WKLWKL":3,"ZSFSHE":20,"OENOBI":20,"AKEJNV":10,"UMUMFF":10,"YOPWEU":35,"RWUEEW":7,"JSXRXZ":10,"YCXLSH":36}'}
   name: content_panel
   layout_properties: {slot: default}
   components:
@@ -14,27 +14,30 @@ components:
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: font_dim
-    layout_properties: {grid_position: 'XPSLKE,OENOBI'}
+    layout_properties: {grid_position: 'XPSLKE,OENOBI', full_width_row: false}
   - type: Button
-    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+    properties: {role: filled-button, align: right, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: 'fa:minus'}
     name: font_minus
-    layout_properties: {grid_position: 'XPSLKE,AKEJNV'}
+    layout_properties: {grid_position: 'XPSLKE,AKEJNV', full_width_row: false}
     event_bindings: {click: font_minus_click}
   - type: Button
-    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+    properties: {role: filled-button, align: left, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: 'fa:plus'}
     name: font_plus
-    layout_properties: {grid_position: 'XPSLKE,UMUMFF'}
+    layout_properties: {grid_position: 'XPSLKE,UMUMFF', full_width_row: false}
     event_bindings: {click: font_plus_click}
   - type: ColumnPanel
-    properties: {}
+    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '',
+      spacing_below: small, background: ''}
     name: column_panel_1
-    layout_properties: {grid_position: 'XPSLKE,YOPWEU'}
+    layout_properties: {grid_position: 'XPSLKE,YOPWEU', full_width_row: false}
+    components: []
   - type: CheckBox
     properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
       foreground: '', allow_indeterminate: false, visible: true, text: Visualizza accordi,
@@ -43,14 +46,6 @@ components:
     name: accordi
     layout_properties: {grid_position: 'KOXRAJ,MOSKEJ'}
     event_bindings: {change: accordi_change}
-  - type: Button
-    properties: {role: tonal-button, align: right, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:minus'}
-    name: minus
-    layout_properties: {grid_position: 'WZUDCV,JZYPTN'}
-    event_bindings: {click: minus_click}
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: false, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
@@ -58,6 +53,21 @@ components:
       icon: ''}
     name: tonalita
     layout_properties: {grid_position: 'WZUDCV,WKLWKL'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: false, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
+    name: modo
+    layout_properties: {grid_position: 'WZUDCV,RWUEEW'}
+  - type: Button
+    properties: {role: tonal-button, align: right, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:minus'}
+    name: minus
+    layout_properties: {grid_position: 'WZUDCV,JSXRXZ'}
+    event_bindings: {click: minus_click}
   - type: Button
     properties: {role: tonal-button, align: left, tooltip: '', border: '', enabled: true,
       foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
@@ -66,13 +76,12 @@ components:
     name: plus
     layout_properties: {grid_position: 'WZUDCV,ZSFSHE'}
     event_bindings: {click: plus_click}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: false, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
-    name: modo
-    layout_properties: {grid_position: 'WZUDCV,LMYDOD'}
+  - type: ColumnPanel
+    properties: {}
+    name: column_panel_1_copy
+    layout_properties:
+      col_widths: {}
+      grid_position: WZUDCV,YCXLSH
   - type: RichText
     properties: {role: null, align: left, tooltip: '', enable_slots: true, border: '',
       foreground: '', visible: true, font_size: null, content: '', font: '', spacing_above: small,
