--- a/client_code/canti_domenica/form_template.yaml
+++ b/client_code/canti_domenica/form_template.yaml
@@ -4,33 +4,40 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{"OENOBI":20,"AKEJNV":10,"UMUMFF":10,"YOPWEU":35}'}
+  properties: {col_widths: '{"YOPWEU":30,"XWFQJW":35}'}
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Dimensione testo:', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: font_dim
-    layout_properties: {grid_position: 'XPSLKE,OENOBI'}
-  - type: Button
-    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:minus'}
-    name: font_minus
-    layout_properties: {grid_position: 'XPSLKE,AKEJNV'}
-    event_bindings: {click: font_minus_click}
-  - type: Button
-    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:plus'}
-    name: font_plus
-    layout_properties: {grid_position: 'XPSLKE,UMUMFF'}
-    event_bindings: {click: font_plus_click}
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"FPXHRY":25,"FHVTKP":15,"PXAXBO":20}',
+      spacing_below: small, background: ''}
+    name: outlined_card_1
+    layout_properties: {grid_position: 'XPSLKE,XWFQJW'}
+    components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: 'Dimensione testo:', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: font_dim
+      layout_properties: {grid_position: 'LWMPRO,FPXHRY'}
+    - type: Button
+      properties: {role: filled-button, align: right, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:minus'}
+      name: font_minus
+      layout_properties: {grid_position: 'LWMPRO,FHVTKP'}
+      event_bindings: {click: font_minus_click}
+    - type: Button
+      properties: {role: filled-button, align: left, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:plus'}
+      name: font_plus
+      layout_properties: {grid_position: 'LWMPRO,PXAXBO'}
+      event_bindings: {click: font_plus_click}
   - type: ColumnPanel
     properties: {}
     name: column_panel_1
@@ -54,14 +61,6 @@ components:
   name: navbar_links
   layout_properties: {slot: nav-right}
   components:
-  - type: Button
-    properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:arrow-circle-left'}
-    name: back
-    layout_properties: {}
-    event_bindings: {click: back_click}
   - type: Button
     properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
