--- a/client_code/canto/form_template.yaml
+++ b/client_code/canto/form_template.yaml
@@ -4,33 +4,40 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{"WKLWKL":3,"ZSFSHE":20,"OENOBI":20,"AKEJNV":10,"UMUMFF":10,"YOPWEU":35,"RWUEEW":7,"JSXRXZ":10,"YCXLSH":36}'}
+  properties: {col_widths: '{"YOPWEU":30,"YCXLSH":36,"DDGBUK":35,"RWLCRH":30}'}
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Dimensione testo:', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: font_dim
-    layout_properties: {grid_position: 'XPSLKE,OENOBI', full_width_row: false}
-  - type: Button
-    properties: {role: filled-button, align: right, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:minus'}
-    name: font_minus
-    layout_properties: {grid_position: 'XPSLKE,AKEJNV', full_width_row: false}
-    event_bindings: {click: font_minus_click}
-  - type: Button
-    properties: {role: filled-button, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:plus'}
-    name: font_plus
-    layout_properties: {grid_position: 'XPSLKE,UMUMFF', full_width_row: false}
-    event_bindings: {click: font_plus_click}
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"NTKJHX":25,"BNMKGL":15,"AIFMEZ":20}',
+      spacing_below: small, background: ''}
+    name: outlined_card_1
+    layout_properties: {grid_position: 'XPSLKE,DDGBUK', full_width_row: false}
+    components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: 'Dimensione testo:', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: font_dim
+      layout_properties: {grid_position: 'WZXXCC,NTKJHX', full_width_row: false}
+    - type: Button
+      properties: {role: filled-button, align: right, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:minus'}
+      name: font_minus
+      layout_properties: {grid_position: 'WZXXCC,BNMKGL', full_width_row: false}
+      event_bindings: {click: font_minus_click}
+    - type: Button
+      properties: {role: filled-button, align: left, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:plus'}
+      name: font_plus
+      layout_properties: {grid_position: 'WZXXCC,AIFMEZ', full_width_row: false}
+      event_bindings: {click: font_plus_click}
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '',
@@ -46,36 +53,43 @@ components:
     name: accordi
     layout_properties: {grid_position: 'KOXRAJ,MOSKEJ'}
     event_bindings: {change: accordi_change}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: false, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
-    name: tonalita
-    layout_properties: {grid_position: 'WZUDCV,WKLWKL'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: false, text: '', font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
-    name: modo
-    layout_properties: {grid_position: 'WZUDCV,RWUEEW'}
-  - type: Button
-    properties: {role: tonal-button, align: right, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:minus'}
-    name: minus
-    layout_properties: {grid_position: 'WZUDCV,JSXRXZ'}
-    event_bindings: {click: minus_click}
-  - type: Button
-    properties: {role: tonal-button, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
-      icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: 'fa:plus'}
-    name: plus
-    layout_properties: {grid_position: 'WZUDCV,ZSFSHE'}
-    event_bindings: {click: plus_click}
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: false,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"LXTCBC":10,"CLFFHC":15,"YDSYPS":20,"WPYBXS":15}',
+      spacing_below: small, background: ''}
+    name: outlined_card_2
+    layout_properties: {grid_position: 'WZUDCV,RWLCRH'}
+    components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: false, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: tonalita
+      layout_properties: {grid_position: 'IFYZNP,LXTCBC'}
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: false, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: modo
+      layout_properties: {grid_position: 'IFYZNP,CLFFHC'}
+    - type: Button
+      properties: {role: tonal-button, align: right, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:minus'}
+      name: minus
+      layout_properties: {grid_position: 'IFYZNP,YDSYPS'}
+      event_bindings: {click: minus_click}
+    - type: Button
+      properties: {role: tonal-button, align: left, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
+        icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:plus'}
+      name: plus
+      layout_properties: {grid_position: 'IFYZNP,WPYBXS'}
+      event_bindings: {click: plus_click}
   - type: ColumnPanel
     properties: {}
     name: column_panel_1_copy
