--- a/client_code/main/form_template.yaml
+++ b/client_code/main/form_template.yaml
@@ -13,72 +13,93 @@ components:
     name: outlined_card_1
     layout_properties: {grid_position: 'WHMVNF,DUFQEW'}
     components:
-    - type: Button
-      properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: Libretto dei canti, font_size: null,
-        font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: button_libretto
-      layout_properties: {grid_position: 'CUHEFD,GNTMVE'}
-      event_bindings: {click: button_libretto_click}
-    - type: Button
-      properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: Canti della domenica, font_size: null,
-        font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: button_canti
-      layout_properties: {grid_position: 'CUHEFD,KLYDGA'}
-      event_bindings: {click: button_canti_click}
-    - type: Button
-      properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: Editor canti, font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: button_editor
-      layout_properties: {grid_position: 'CUHEFD,WEXVZP'}
-      event_bindings: {click: button_editor_click}
     - type: ColumnPanel
-      properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+      properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
         wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
         spacing_below: small, background: ''}
-      name: outlined_card_2
-      layout_properties: {grid_position: 'GCJITD,ZSXAMU'}
+      name: outlined_card_5
+      layout_properties: {grid_position: 'ZZVJUQ,BZRGLA'}
       components:
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: Consulta il libretto con tutti i nostri canti, font_size: null,
-          font: '', spacing_above: small, icon_align: left, spacing_below: small,
+      - type: Button
+        properties: {role: filled-button, align: center, tooltip: '', border: '',
+          enabled: true, foreground: '', visible: true, text: Libretto dei canti,
+          font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
           italic: false, background: '', bold: false, underline: false, icon: ''}
-        name: label_libretto
-        layout_properties: {grid_position: 'WRXRFO,PLTCEO'}
+        name: button_libretto
+        layout_properties: {grid_position: 'PEZHKH,SSYAWB'}
+        event_bindings: {click: button_libretto_click}
+      - type: ColumnPanel
+        properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+          wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+          spacing_below: small, background: ''}
+        name: outlined_card_2
+        layout_properties: {grid_position: 'BTGHJZ,ENWYRZ'}
+        components:
+        - type: Label
+          properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+            visible: true, text: Consulta il libretto con tutti i nostri canti, font_size: null,
+            font: '', spacing_above: small, icon_align: left, spacing_below: small,
+            italic: false, background: '', bold: false, underline: false, icon: ''}
+          name: label_libretto
+          layout_properties: {grid_position: 'PLVPNX,LJZNGC'}
     - type: ColumnPanel
-      properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+      properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
         wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
         spacing_below: small, background: ''}
-      name: outlined_card_3
-      layout_properties: {grid_position: 'GCJITD,JKFDMS'}
+      name: outlined_card_6
+      layout_properties: {grid_position: 'ZZVJUQ,CKFLEK'}
       components:
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: Segui i canti aggiornati per ogni celebrazione, font_size: null,
-          font: '', spacing_above: small, icon_align: left, spacing_below: small,
+      - type: Button
+        properties: {role: filled-button, align: center, tooltip: '', border: '',
+          enabled: true, foreground: '', visible: true, text: Canti della domenica,
+          font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
           italic: false, background: '', bold: false, underline: false, icon: ''}
-        name: label_canti
-        layout_properties: {grid_position: 'BBXQSB,LGIEMX'}
+        name: button_canti
+        layout_properties: {grid_position: 'EBAUDW,SAAWMI'}
+        event_bindings: {click: button_canti_click}
+      - type: ColumnPanel
+        properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+          wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+          spacing_below: small, background: ''}
+        name: outlined_card_3
+        layout_properties: {grid_position: 'TQRZBE,KRLLYY'}
+        components:
+        - type: Label
+          properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+            visible: true, text: Segui i canti aggiornati per ogni celebrazione, font_size: null,
+            font: '', spacing_above: small, icon_align: left, spacing_below: small,
+            italic: false, background: '', bold: false, underline: false, icon: ''}
+          name: label_canti
+          layout_properties: {grid_position: 'JVRTUK,PDECDV'}
     - type: ColumnPanel
-      properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+      properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
         wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
         spacing_below: small, background: ''}
-      name: outlined_card_4
-      layout_properties: {grid_position: 'GCJITD,HZLBFV'}
+      name: outlined_card_7
+      layout_properties: {grid_position: 'ZZVJUQ,BMUMVD'}
       components:
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: Scrivi nuovi canti (solo per admin), font_size: null,
-          font: '', spacing_above: small, icon_align: left, spacing_below: small,
-          italic: false, background: '', bold: false, underline: false, icon: ''}
-        name: label_editor
-        layout_properties: {grid_position: 'EWJDAT,LSRLOL'}
+      - type: Button
+        properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
+          foreground: '', visible: true, text: Editor canti, font_size: null, font: '',
+          spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+          background: '', bold: false, underline: false, icon: ''}
+        name: button_editor
+        layout_properties: {grid_position: 'JAWGDP,LAGDDX'}
+        event_bindings: {click: button_editor_click}
+      - type: ColumnPanel
+        properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+          wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+          spacing_below: small, background: ''}
+        name: outlined_card_4
+        layout_properties: {grid_position: 'JLRQKW,IERKOR'}
+        components:
+        - type: Label
+          properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+            visible: true, text: Scrivi nuovi canti (solo per admin), font_size: null,
+            font: '', spacing_above: small, icon_align: left, spacing_below: small,
+            italic: false, background: '', bold: false, underline: false, icon: ''}
+          name: label_editor
+          layout_properties: {grid_position: 'EWJDAT,LSRLOL'}
 - type: FlowPanel
   properties: {}
   name: navbar_links
