Created sb_logo.png and Screenshot 2023-11-11 113655.png; Edited settings

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -65,6 +65,7 @@ allow_embedding: false
 name: App CUSB
 runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
   server_spec: null}
+metadata: {logo_img: 'asset:sb_logo.png'}
 startup_form: null
 native_deps: {head_html: '<link rel="preconnect" href="https://fonts.googleapis.com">
 
