--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -25,6 +25,8 @@ unique_ids:
   server_modules:
     ServerModule1: '1695736932048592438478707.8512'
   assets:
+    Screenshot 2023-11-11 113655.png: '1699699162938306321751534.3941'
+    sb_logo.png: '169969932804319053575464.895943'
     standard-page.html: UZ4LQUYGVATFRD2ZRE5VFSFZOZKXFAAD
     theme.css: EHQ3CRPXXFMQKA3ZCFOAZ74A3YIKXLNT
     editor/.gitkeep: '169574917307396029137589.79059'
