Created CUSB.png and CUSB (1).png; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -25,10 +25,12 @@ unique_ids:
   server_modules:
     ServerModule1: '1695736932048592438478707.8512'
   assets:
-    Screenshot 2023-11-11 113655.png: '1699699162938306321751534.3941'
-    sb_logo.png: '169969932804319053575464.895943'
-    standard-page.html: UZ4LQUYGVATFRD2ZRE5VFSFZOZKXFAAD
-    theme.css: EHQ3CRPXXFMQKA3ZCFOAZ74A3YIKXLNT
     editor/.gitkeep: '169574917307396029137589.79059'
+    sb_logo.png: '169969932804319053575464.895943'
+    Screenshot 2023-11-11 113655.png: '1699699162938306321751534.3941'
+    CUSB.png: '1699700424924825456084323.3882'
+    theme.css: EHQ3CRPXXFMQKA3ZCFOAZ74A3YIKXLNT
+    CUSB (1).png: '169970068267031525904119.694027'
     editor/editor.html: '1695749181112336746536376.15704'
+    standard-page.html: UZ4LQUYGVATFRD2ZRE5VFSFZOZKXFAAD
     editor/editor_func.js: '1695749222843895550213793.7444'
